test/files/neg/t12349/t12349a.java
package t12349;

public class t12349a {

       public void a1() { System.out.println("t12349a#a1()"); }
       public void a2() { System.out.println("t12349a#a2()"); }
       public void a3() { System.out.println("t12349a#a3()"); }
       public void a4() { System.out.println("t12349a#a4()"); }
       public void a5() { System.out.println("t12349a#a5()"); }
       public void a6() { System.out.println("t12349a#a6()"); }
       public void a7() { System.out.println("t12349a#a7()"); }
       public void a8() { System.out.println("t12349a#a8()"); }
       public void a9() { System.out.println("t12349a#a9()"); }

    protected void b1() { System.out.println("t12349a#b1()"); }
    protected void b2() { System.out.println("t12349a#b2()"); }
    protected void b3() { System.out.println("t12349a#b3()"); }
    protected void b4() { System.out.println("t12349a#b4()"); }
    protected void b5() { System.out.println("t12349a#b5()"); }
    protected void b6() { System.out.println("t12349a#b6()"); }
    protected void b7() { System.out.println("t12349a#b7()"); }
    protected void b8() { System.out.println("t12349a#b8()"); }
    protected void b9() { System.out.println("t12349a#b9()"); }

              void c1() { System.out.println("t12349a#c1()"); }
              void c2() { System.out.println("t12349a#c2()"); }
              void c3() { System.out.println("t12349a#c3()"); }
              void c4() { System.out.println("t12349a#c4()"); }
              void c5() { System.out.println("t12349a#c5()"); }
              void c6() { System.out.println("t12349a#c6()"); }
              void c7() { System.out.println("t12349a#c7()"); }
              void c8() { System.out.println("t12349a#c8()"); }
              void c9() { System.out.println("t12349a#c9()"); }

      private void d1() { System.out.println("t12349a#d1()"); }
      private void d2() { System.out.println("t12349a#d2()"); }
      private void d3() { System.out.println("t12349a#d3()"); }
      private void d4() { System.out.println("t12349a#d4()"); }
      private void d5() { System.out.println("t12349a#d5()"); }
      private void d6() { System.out.println("t12349a#d6()"); }
      private void d7() { System.out.println("t12349a#d7()"); }
      private void d8() { System.out.println("t12349a#d8()"); }
      private void d9() { System.out.println("t12349a#d9()"); }

}
